# dtw-lab

./: .gitignore  DockerFile  Dockerfile  LICENSE.md  README.md  main.py  pyproject.toml
.github/workflows/: pr-openning.yaml
lab1_bootstrap/: DockerFile  main.py
lab1_bootstrap/src/dtw_lab/: lab1.py
scripts/: build.sh  deploy.sh  e2e_test.sh  integration_test.sh  release.sh
src/dtw_lab/: lab1.py  lab2.py  prueba.py
tests/: test_lab2.py
